--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,17 +10,10 @@
   <div class="ion-padding">
     <ion-input placeholder="Número A" type="text" [(ngModel)]="numeroA"></ion-input>
     <ion-input placeholder="Númeor B" [(ngModel)]="numeroB" class="ion-text-right"></ion-input>
-    <!--<div>
-      <ion-grid>
-        <ion-row>
-          <ion-col><ion-button style="width: 10%;">1</ion-button></ion-col>
-          <ion-col><ion-button style="width: 8%;">0</ion-button></ion-col>
-        </ion-row>
-      </ion-grid>
-    </div>   --> 
-    <ion-button expand="block" (click)="ordenarTexto()">SUMA</ion-button>
+    
+    <ion-button expand="block" (click)="Suma()">SUMA</ion-button>
     <ion-button expand="block">RESTA</ion-button>
-    <ion-button expand="block">MULTIPLICACIÓN</ion-button>
+    <ion-button expand="block" (click)="Multiplicacion()">MULTIPLICACIÓN</ion-button>
     <ion-button expand="block">DIVISIÓN</ion-button>
   </div>
 </ion-content>
